Programming exercises: Allow to publish example solutions for programming exercises on a specific date (#4795)